--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -36,3 +36,34 @@
     transform: rotate(360deg);
   }
 }
+
+
+.home-full-width {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  z-index: -1;
+}
+
+.home-box-shadow-banner {
+  position: absolute;
+  z-index: 22;
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 100%;
+  height: 100%;
+}
+
+.home-image-banner {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: absolute;
+}
+
+.home-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 420px;
+}
