--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,7 +49,7 @@
 .home-box-shadow-banner {
   position: absolute;
   z-index: 22;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
 }
@@ -66,4 +66,9 @@
   width: 100%;
   height: 100%;
   min-height: 420px;
+}
+
+.active-nav {
+  border-bottom: 4px solid #fbe14d;
+  border-radius: 0;
 }
